[metadata]
name = nsgp_torch
author = Zeel B Patel
author-email = patel_zeel@iitgn.ac.in
description = Non-stationary GP package written from scratch in PyTorch
url = https://github.com/patel-zeel/nsgp_torch
license = MIT
long_description_content_type = text/markdown
long_description = file: README.md
